重构主题色

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <div class="form">
           <div class="form-item">
-            <textarea name="textarea" id="intro"></textarea>
+            <textarea name="textarea" id="intro" rows="5"></textarea>
             <label for="intro">个性签名</label>
           </div>
         </div>
@@ -113,7 +113,7 @@
       </section>
 
       <section>
-        <h3 class="underline">折叠层 <span class="text-muted">Collapsible</span></h3>
+        <h3 class="underline">折叠层 <span class="text-muted">Collapse</span></h3>
 
         <p>折叠信息而节约屏幕空间。</p>
 
