增加主题色、重命名类名

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>进行任何操作都需要的基础控件。</p>
         <p class="text-primary">基础按钮</p>
 
-        <div class="flex gap">
+        <div class="flex gap-10">
           <button class="button">初级按钮</button>
           <button class="safe-button">安全按钮</button>
           <button class="warning-button">警告按钮</button>
